# kilo-guardian-core

./: .gitignore  AGENT-CHAT-INTEGRATION.md  API_ROUTING_FIXED.md  ARCHITECTURE.md  ARCHITECTURE_CLARIFICATION.md  CORRECTED_ACCESS.md  FINAL_SETUP_SUMMARY.md  FIXES_APPLIED.md  IMPROVEMENTS_COMPLETE.md  INTEGRATION-ISSUE-SUMMARY.md  K3S_SETUP_GUIDE.md  KILO-ENHANCEMENTS-2026-02-01.md  KILO-INTELLIGENCE-TEST.md  KILO-RESPONSE-LOGGING.md  KILO_HYBRID_SETUP.md  KILO_K3S_SKILLS.md  KILO_SYSTEM_GUIDE.md  Kilo-gui.py  LLM-SERVER-VERIFICATION.md  PROACTIVE-AGENT-GUIDE.md  PROACTIVE_SYSTEM_ISSUES.md  README.md  SYSTEM_OPERATIONAL.md  Start_Brain.desktop  Start_Kilo.desktop  TABLET-SSH-SETUP.md  TOOLS-STATUS.md  TOOLS-WORKING.md  ai_brain.py  db.py  download_smart_model.py  gateway.py  habits.py  kilo-agent-api.service  kilo_agent_api.py  kilo_memory.py  kilo_panel.py  kilo_pod_access.py  kilo_proactive_agent.py  meds.py  (+8 more)
Kilo_K3S_parts/: README.md
core/: kilo_agent.py  kilo_agent_brain.py  kilo_agent_ui.py  kilo_agent_ui_complete.py  kilo_agent_ui_enhanced.py  kilo_auto_data_fetch.py  kilo_chat.py  kilo_mission_control.py  kilo_router.py  test_agent_brain.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CLEANUP_EXECUTION_SUMMARY.md  COPILOT_CLEANUP_REPORT.md  FEATURES.md  OCR_TIMEOUT_FIX.md  README.md  URGENT_MEDS_DEPLOYMENT_FIX.md
frontend_prototype/: Dockerfile  admin.html  reminders.html
k3s/: README.md  README_NOTES.md  ai-brain-rbac.yaml  configmap-updated.yaml  (+20 more)
services/financial/: main.py  pyproject.toml
services/financial/tests/: test_document_ingest.py
(+309 files in other folders)
